# pytest-factoryboy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGES.rst  DEVELOPMENT.md  LICENSE.md  MANIFEST.in  Makefile  README.rst  RELEASING.md  pyproject.toml  requirements-testing.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: code_quality.yml  main.yml  mypy.yml  prepare.yml
docs/: conf.py  index.rst
pytest_factoryboy/: __init__.py  codegen.py  compat.py  fixture.py  fixturegen.py  hooks.py  plugin.py  pytest_factoryboy.sublime-workspace
src/pytest_factoryboy/: __init__.py  fixture.py  fixturegen.py  plugin.py
tests/: compat.py  django_settings.py  rewriteme.py  test_attributes_field.py  test_circular.py  test_create_override.py  test_factory_fixtures.py  test_factory_name.py  test_foo.py  test_lazy_fixture.py  test_model_name.py  test_namespaces.py  test_non_standard_parent_factory_name.py  test_non_standard_subfactory_name.py  test_postgen_dependencies.py  test_register_class.py  test_registration.py  test_rewrite.py  test_rewriteme.py  test_trait_maybe.py  test_validation.py
tests/django_app/: models.py
tests/maybe/: test_subfactory.py
