[tool.poetry]
name = "pytest-factoryboy"
version = "2.5.0"
description = "Factory Boy support for pytest."
authors = ["Oleg Pidsadnyi <oleg.pidsadnyi@gmail.com>"]
maintainers = ["Alessio Bogon <youtux@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://pytest-factoryboy.readthedocs.io/"
documentation = "https://pytest-factoryboy.readthedocs.io/"
repository = "https://github.com/pytest-dev/pytest-factoryboy"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.plugins."pytest11"]
"pytest-factoryboy" = "pytest_factoryboy.plugin"

[tool.poetry.dependencies]
python = ">=3.7"
inflection = "*"
factory_boy = ">=2.10.0"
pytest = ">=5.0.0"
typing_extensions = "*"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
tox = "^3.25.0"
packaging = "^21.3"
importlib-metadata = "^4.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.isort]
profile = 'black'

[tool.mypy]
exclude = ['docs/']
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_explicit = false
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
warn_return_any = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false
disallow_untyped_defs = false
warn_return_any = false
