[metadata]
name = pytest-factoryboy
description = Factory Boy support for pytest.
long_description = file: README.rst, AUTHORS.rst, CHANGES.rst
long_description_content_type = text/x-rst
author = Oleg Pidsadnyi, Anatoly Bubenkov and others
license = MIT license
author_email = oleg.pidsadnyi@gmail.com
url = https://github.com/pytest-dev/pytest-factoryboy
version = attr: pytest_factoryboy.__version__
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.6
install_requires =
    inflection
    factory_boy>=2.10.0
    pytest>=4.6
tests_require = tox
packages = pytest_factoryboy
include_package_data = True

[options.entry_points]
pytest11 =
    pytest-factoryboy = pytest_factoryboy.plugin
